fix style break in new and show (user view)

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -21,6 +21,7 @@ body {
 
 .main {
   padding: 0px 10px;
+  margin-top: -200px;
 }
 
 @media screen and (max-height: 450px) {
